force-app/main/default/objects/GPSCanvasInterface__e/GPSCanvasInterface__e.object-meta.xml
<CustomObject>
    <description>Evento utilizado para comunicação entre GPS e Salesforce.</description>
    <label>GPSCanvasInterface</label>
    <pluralLabel>GPSCanvasInterfaces</pluralLabel>
</CustomObject>