force-app/main/default/objects/GPSCanvasInterface__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Identificador da conta do cliente.</description>
    <label>AccountId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>