force-app/main/default/objects/GPSCanvasInterface__e/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <description>Identificador do caso no salesforce.</description>
    <label>CaseId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>