force-app/main/default/objects/GPSCanvasInterface__e/fields/Closure__c.field-meta.xml
<CustomField>
    <fullName>Closure__c</fullName>
    <description>Descrição do fechamento do caso.</description>
    <label>Closure</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>