force-app/main/default/objects/GPSCanvasInterface__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Contexto da ligação.</description>
    <label>Context</label>
    <length>40</length>
    <type>Text</type>
</CustomField>