force-app/main/default/objects/GPSCanvasInterface__e/fields/CustomerInteractionId__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteractionId__c</fullName>
    <label>Customer Interaction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>