force-app/main/default/objects/GPSCanvasInterface__e/fields/CustomerInteractionTopicId__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteractionTopicId__c</fullName>
    <label>Customer Interaction Topic</label>
    <length>20</length>
    <type>Text</type>
</CustomField>