force-app/main/default/objects/GPSCanvasInterface__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrição</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>