force-app/main/default/objects/GPSCanvasInterface__e/fields/DestinyCell__c.field-meta.xml
<CustomField>
    <fullName>DestinyCell__c</fullName>
    <description>Célula de destino da ligação.</description>
    <label>DestinyCell</label>
    <length>40</length>
    <type>Text</type>
</CustomField>