force-app/main/default/objects/GPSCanvasInterface__e/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <description>Campo de observações para carimbos.</description>
    <label>Observation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>