force-app/main/default/objects/GPSCanvasInterface__e/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <description>Define a regra de negócio a ser executada.</description>
    <label>OperationType</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>