force-app/main/default/objects/GPSCanvasInterface__e/fields/OriginCell__c.field-meta.xml
<CustomField>
    <fullName>OriginCell__c</fullName>
    <description>Célula de origem do atendimento.</description>
    <label>OriginCell</label>
    <length>40</length>
    <type>Text</type>
</CustomField>