force-app/main/default/objects/GPSCanvasInterface__e/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <description>Número de protocolo gerado para o atendimento.</description>
    <label>Protocol</label>
    <length>30</length>
    <type>Text</type>
</CustomField>