force-app/main/default/objects/GPSCanvasInterface__e/fields/ServiceRequestId__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequestId__c</fullName>
    <description>Identificador da solicitação de serviço criada para o atendimento em questão.</description>
    <label>ServiceRequestId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>