force-app/main/default/objects/GPSCanvasInterface__e/fields/ServiceRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequestStatus__c</fullName>
    <description>Identificador da solicitação de serviço criada para o atendimento.</description>
    <label>ServiceRequestStatus</label>
    <length>30</length>
    <type>Text</type>
</CustomField>