force-app/main/default/objects/GPSCanvasInterface__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>Identificador do usuário logado no salesforce.</description>
    <label>UserId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>